workshop-day4/weather-istio/weather-gw.yaml
apiVersion: networking.istio.io/v1alpha3

kind: Gateway

metadata:
  name: weatherapp-gateway

spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - weather.139.59.221.16.nip.io
