workshop-day4/weather-istio/weather-dst-rule.yaml

apiVersion: networking.istio.io/v1alpha3

kind: DestinationRule

metadata:
  name: weatherappdr

spec:
  host: "*"
  subsets:
  - name: leastconn
    trafficPolicy:
      loadBalancer: 
        simple: LEAST_CONN
