workshop-day4/weather-istio/weather-vs.yaml
apiVersion: networking.istio.io/v1alpha3

kind: VirtualService

metadata:
  name: weatherapp-vs

spec:
  hosts:
  - "*"
  gateways:
  - weatherapp-gateway

  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: weatherappsvc
        port:
          number: 8080
    rewrite:
      uri: /
